--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,66 @@
+html,body	{
+	width: 100%;
+	min-height: 100%;
 
+}
+
+header	{
+	width: 76%;
+	min-width: 648px;
+	margin: 0 12%;
+	box-sizing: border-box;
+	text-align: justify;
+}
+
+p	{
+	margin: 20px auto;
+	box-sizing: border-box;
+	font-family: sans-serif;
+	font-size: 130%;
+	line-height: 135%;
+}
+
+.welcome	{
+	text-align: right;
+}
+
+a	{
+	text-decoration: none;
+}
+
+
+
+.main	{
+	margin: 0 12%;
+	min-width: 648px;
+	display: flex;
+	flex-direction: column;
+}
+
+.row	{
+	margin: 0px;
+	display: flex;
+	justify-content: space-around;
+}
+
+.icon	{
+	width: 150px;
+	height: 150px;
+	margin: 6px;
+	box-sizing: border-box;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+}
+
+
+
+footer	{
+	width: 76%;
+	min-height: 10px;
+	margin: 0 auto;
+	border-width: 5px;
+	border-top: 1px solid gray;
+	text-align: center;
+	font-size: 65%;
+}
